@@ -83,3 +83,7 @@ CREATE TABLE galette_payments_schedules (
   FOREIGN KEY (id_cotis) REFERENCES galette_cotisations (id_cotis) ON DELETE CASCADE ON UPDATE CASCADE,
   FOREIGN KEY (id_paymenttype) REFERENCES galette_paymenttypes (type_id) ON DELETE CASCADE ON UPDATE CASCADE
 );
+
+ALTER TABLE galette_types_cotisation CHANGE cotis_extension cotis_extension TINYINT NOT NULL DEFAULT '0';
+UPDATE galette_types_cotisation SET cotis_extension=-1 WHERE cotis_extension=1;
+
