@@ -197,7 +197,7 @@ class ContributionsTypesController extends CrudController
         $ctype = new ContributionsTypes($this->zdb);
 
         $label = trim($post['libelle_type_cotis']);
-        $field = (bool)trim($post['cotis_extension'] ?? 0);
+        $field = (int)trim($post['cotis_extension'] ?? 0);
         $amount = null;
         if (isset($post['amount']) && $post['amount'] !== '') {
             $amount = (float)$post['amount'];
