@@ -113,7 +113,7 @@ class ContributionsTypes extends TestCase
 
         $this->assertSame('Test contribution type', $test_ctype['libelle_type_cotis']);
         $this->assertNull($test_ctype['amount']);
-        $this->assertSame($this->zdb->isPostgres() ? false : 0, $test_ctype['cotis_extension']);
+        $this->assertSame(0, $test_ctype['cotis_extension']);
 
         $select = $this->zdb->select(\Galette\Core\L10n::TABLE);
         $select->where(
@@ -148,7 +148,7 @@ class ContributionsTypes extends TestCase
 
         $this->assertSame('Tested contribution type', $test_ctype['libelle_type_cotis']);
         $this->assertSame(42.0, (float)$test_ctype['amount']);
-        $this->assertSame($this->zdb->isPostgres() ? true : 1, $test_ctype['cotis_extension']);
+        $this->assertSame(1, $test_ctype['cotis_extension']);
 
         $select = $this->zdb->select(\Galette\Core\L10n::TABLE);
         $select->where(
